--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		
 	<div id="Editor">
 		<div class="col s12">
-      <ul class="tabs">
+      <ul class="tabs black">
         <li class="tab col s6"><a class="active" href="#FragEditor">Fragmental</a></li>
         <li class="tab col s6"><a href="#VertexEditor">Vertex</a></li>
       </ul>
@@ -59,7 +59,38 @@
 		<button class="btn waves-effect waves-light" id="compileButton">Compile</button>
 	</div>
 
+<!-- Default shaders -->
 
+		<script type="text/glsl" id="defaultFragmental">
+uniform float time;
+
+varying vec2 vUv;
+
+void main( void ) {
+
+	vec2 position = vUv;
+
+	float color = 0.0;
+	color += sin( position.x * cos( time / 15.0 ) * 80.0 ) + cos( position.y * cos( time / 15.0 ) * 10.0 );
+	color += sin( position.y * sin( time / 10.0 ) * 40.0 ) + cos( position.x * sin( time / 25.0 ) * 40.0 );
+	color += sin( position.x * sin( time / 5.0 ) * 10.0 ) + sin( position.y * sin( time / 35.0 ) * 80.0 );
+	color *= sin( time / 10.0 ) * 0.5;
+
+	gl_FragColor = vec4( vec3( color, color * 0.5, sin( color + time / 3.0 ) * 0.75 ), 1.0 );
+
+}
+		</script>
+
+		<script type="text/glsl" id="defaultVertex">
+varying vec2 vUv;
+
+void main()
+{
+	vUv = uv;
+	vec4 mvPosition = modelViewMatrix * vec4( position, 1.0 );
+	gl_Position = projectionMatrix * mvPosition;
+}
+		</script>
 
 		<!-- Libs -->
 		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
