Add view menu item. Box, plane and sphere buttons was deleted.

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 	<div id="WebGL-output">
 	</div>
 	<div id="Options">
-		<button class="btn waves-effect waves-light" id="boxButton">Box</button>
+		<!--<button class="btn waves-effect waves-light" id="boxButton">Box</button>
 		<button class="btn waves-effect waves-light" id="planeButton">Plane</button>
 		<button class="btn waves-effect waves-light" id="sphereButton">Sphere</button>
-		<br/>
+		<br/>-->
 		<button class="btn waves-effect waves-light" id="compileButton">Compile</button>
 	</div>
 
