Save and load dialogs

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@ void main()
 		<script type="text/javascript" src="js/ace-min/ace.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="js/ace-min/theme-monokai.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript" src="js/ace-min/mode-glsl.js" type="text/javascript" charset="utf-8"></script>
+		<input id="fileSaveDialog" type="file" style="display:none" nwsaveas>
+		<input id="fileOpenDialog" type="file" style="display:none">
+
+
+In the preceding example, a default file input field will be rendered in the viewport, clicking on it will open the file dialog, and then selecting a file will trigger the change event, which will return the file path...
 
 		<!-- Main scripts -->
 		<script>
